# firstsight

./: Makefile  README.md  README_FIRSTSIGHT.md
backend/: .env.example  Makefile  README.md  pyproject.toml
backend/app/: agent_factory.py  config.py  incident_state.py  main.py  pipeline_bridge.py  preprocess.py  realtime_bridge.py  routes.py  schemas.py  session_manager.py
backend/app/processors/: AGENTS.md  README.md  droop_inference.py  face_droop.py  pose_overlay.py
backend/app/protocols/: loader.py
backend/app/protocols/packs/aed_retrieval/: metadata.json
backend/app/protocols/packs/choking_adult/: metadata.json
backend/app/protocols/packs/cpr_unresponsive_adult/: metadata.json
backend/app/protocols/packs/stroke_fast/: metadata.json
backend/app/stt/: AGENTS.md  README.md  fast_whisper_live.py
backend/tests/: test_sessions.py
mobile/CameraAccessAndroid/app/src/main/java/com/meta/wearable/dat/externalsampleapps/cameraaccess/settings/: SettingsManager.kt
mobile/CameraAccessAndroid/app/src/main/java/com/meta/wearable/dat/externalsampleapps/cameraaccess/ui/: AiModeBadge.kt  NonStreamScreen.kt  SettingsScreen.kt  StreamScreen.kt
mobile/CameraAccessAndroid/app/src/main/java/com/meta/wearable/dat/externalsampleapps/cameraaccess/visionagent/: VisionAgentConfig.kt  VisionAgentService.kt  (+1 more)
mobile/CameraAccessAndroid/tools/: vision_tool_server.py
server/: detector.py  main.py  pipeline.py  signal_processor.py
tests/: test_integration.py  test_signal_processor.py
viewer/: README.md  package.json
viewer/src/: App.tsx  styles.css
