[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "droopdetection-backend"
version = "0.1.0"
description = "Minimal FastAPI and Vision Agents scaffold for the droopdetection backend."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.4,<3.0",
  "python-dotenv>=1.0,<2.0",
  "uvicorn[standard]>=0.30,<1.0",
  "vision-agents[elevenlabs,fast-whisper,gemini,getstream,openai,ultralytics]>=0.5.4,<1.0",
  "pydantic-ai>=0.1,<1.0",
  "logfire[fastapi,pydantic-ai]>=3.0,<5.0",
  "onnxruntime>=1.18,<2.0",
  "mediapipe>=0.10,<1.0",
  "google-genai>=1.0",
  "faiss-cpu>=1.8",
  "networkx>=3.3",
  "ebooklib>=0.18",
  "beautifulsoup4>=4.12",
  "tiktoken>=0.7",
  "lxml>=5.0",
  "numpy>=1.26",
  "scipy>=1.11",
  "opencv-python-headless>=4.8"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.uv]
# mediapipe declares protobuf<5 but works fine at runtime with protobuf 7.x.
# This override keeps protobuf at the version getstream requires.
constraint-dependencies = ["protobuf>=6.31.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
